--- a/ng-fundamentals/Web.config
+++ b/ng-fundamentals/Web.config
@@ -1,6 +1,29 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
+
 <configuration>
+
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="false" targetFramework="4.0" />
   </system.web>
+
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Angular Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.html$" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.js$" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.css$" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.html$" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.ts$" negate="true" />
+            <add input="{REQUEST_FILENAME}" pattern="(.*?)\.css$" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/index.html" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
